--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json --fix"
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix"
   },
   "repository": {
     "type": "git",
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/zilberman3k/async-waterfall#readme",
   "dependencies": {
+    "eslint": "^6.4.0",
     "typescript": "^3.6.2"
   },
   "devDependencies": {
+    "@types/node": "^12.7.5",
     "prettier": "^1.18.2",
     "ts-node-dev": "^1.0.0-pre.42",
     "tslint": "^5.20.0",
