--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "allowJs": false,
     "noImplicitAny": false
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "**/__tests__/*"]
+  "include": ["src/**.ts"],
+  "exclude": ["node_modules", "**/__tests__/*","**/examples/*"]
 }
