--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "tsnd --respawn src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
+    "tdd": "jest --watch",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix"
@@ -21,16 +22,17 @@
     "url": "https://github.com/zilberman3k/async-waterfall/issues"
   },
   "homepage": "https://github.com/zilberman3k/async-waterfall#readme",
-  "dependencies": {
-    "eslint": "^6.4.0",
-    "typescript": "^3.6.2"
-  },
   "devDependencies": {
+    "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
+    "eslint": "^6.4.0",
+    "jest": "^24.9.0",
     "prettier": "^1.18.2",
+    "ts-jest": "^24.1.0",
     "ts-node-dev": "^1.0.0-pre.42",
     "tslint": "^5.20.0",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.6.2"
   },
   "files": [
     "lib/**/*"
